Context API and its use case completed

--- a/ReactJS/React-Ecomm-Project/ecomm-app/index.css
+++ b/ReactJS/React-Ecomm-Project/ecomm-app/index.css
@@ -2,4 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 10px;
+    font-family: 'Kanit', sans-serif;
 }
+
+.container {
+    padding: 1.5rem 2rem;
+}
+
